--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@vueuse/components": "^10.5.0",
+    "@vueuse/core": "^10.5.0",
     "ant-design-vue": "^4.0.6",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
