--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ VITE_PORT = 5000
 VITE_OPEN = false
 
 # 是否生成包预览文件
-VITE_REPORT = false
+VITE_REPORT = true
 
 # 是否删除打包的 console
 VITE_DROP_CONSOLE = false
