feat: 代码交互优化;

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,12 @@ coverage
 
 test-results/
 playwright-report/
+stats.html
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
