--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build-only": "vite build",
     "prepare": "husky install",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --max-warnings=0 --ignore-path .gitignore",
+    "lint": "eslint --fix --max-warnings=0 --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts ./src",
     "format": "prettier --write src/"
   },
   "husky": {
@@ -36,7 +36,6 @@
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
     "lodash-es": "^4.17.21",
-    "lottie-web": "^5.12.2",
     "nanoid": "^5.0.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
