--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ stats.html
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
