--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "tailwindcss": "^3.3.5",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
+    "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^1.8.19"
   }
 }
